test/expected/glob_malformed_bracket.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "[abc"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "[abc"
]
shit: 1:6: error: Malformed glob pattern, unterminated '['.
     1 |  echo [abc
       |       ^~~~ here.
[Code 1]
